updated with latest projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>
             About Me
         </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Hi, my name is Andrew Roddy. I am a junior full-stack developer based in the greater metro Atlanta area. I enjoy long walks through the mountains, my cats, role playing games and hot tea in the evening. My dream is to one day write my own 30 hour interactive text adventure.</p>
     </div>
     <main>
         <section class="two-column">
@@ -36,11 +36,17 @@
             </div>
             <div id="second-column">
                 <div class="first-work">
-                    <a href="https://www.travelalaska.com/" target="_blank"><img src="./assets/images/pexels-photo-371633.jpeg" alt="Alaska Simulator"></a>
+                    <h3>Meal planners</h3>
+                    <p><a href="https://github.com/LFewell/pantry-meal-plannerz" target="_blank">Check it out on github!</a></p>
+                    <a href="https://lfewell.github.io/pantry-meal-plannerz/" target="_blank"><img src="./assets/images/mealplanners.png" alt="meal planners screen"></a>
                 </div>
                 <div class="other-works">
-                    <a href="https://nintendosoup.com/pokemon-x-mister-donut-collaboration-returning-to-japan-on-november-13-2020/#:~:text=Mister%20Donut%20has%20announced%20and,themed%20and%20Poke%20Ball%20treats! " target="_blank"><img src="./assets/images/IMG_20191218_crop.png" alt="misdo pikachu"></a>
-                    <a href="https://www.onlyinyourstate.com/indiana/veals-ice-tree-in/" target="_blank"><img src="./assets/images/IMG_20191219_crop.png" alt="Ice tree"></a>
+                    <h3>Weekly scheduler</h3>
+                    <p><a href="https://github.com/andrewroddy92/schedule-app" target="_blank">Check it out on github!</a></p>
+                    <a href="https://andrewroddy92.github.io/schedule-app/" target="_blank"><img src="./assets/images/weeklyscheduler.png" alt="weekly scheduler"></a>
+                    <h3>JavaScript Quiz</h3>
+                    <p><a href="https://github.com/andrewroddy92/js-quiz" target="_blank">Check it out on github!</a></p>
+                    <a href="https://andrewroddy92.github.io/js-quiz/" target="_blank"><img src="./assets/images/jsquiz.png" alt="JavaScript Quiz"></a>
                 </div>
             </div>
         </section>
@@ -49,7 +55,7 @@
         <h2>Contact Me</h2>
         <div id="footer-second-column">
             <ul>
-                <li>Phone</li>
+                <li><a href = "./assets/andrew_roddy_resume.docx">Resume</a></li>
                 <li><a href = "mailto: andrewroddy92@yahoo.com">andrewroddy92@yahoo.com</a></li>
                 <li><a href = "https://github.com/andrewroddy92">GitHub</a></li>
                 <li><a href = "https://www.linkedin.com/in/andrew-roddy/">LinkedIn</a></li>
